generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

// ─────────────────────────────────────────────
// ENUMS
// ─────────────────────────────────────────────

enum Role {
  USER
  ADMIN
}

enum BlogStatus {
  DRAFT
  PUBLISHED
  ARCHIVED
}

// ─────────────────────────────────────────────
// MODELS
// ─────────────────────────────────────────────

model User {
  id           String   @id @default(uuid())
  name         String   @db.VarChar(100)
  email        String   @unique @db.VarChar(255)
  passwordHash String?  @db.VarChar(255)
  avatar       String?  @db.VarChar(500)
  bio          String?  @db.Text
  role         Role     @default(USER)
  socialLinks  Json?

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  blogs              Blog[]
  comments           Comment[]
  bookmarks          Bookmark[]
  refreshTokens      RefreshToken[]
  passwordResetTokens PasswordResetToken[]
  authIdentities     AuthIdentity[]

  @@index([email])
  @@index([deletedAt])
  @@map("users")
}

model AuthIdentity {
  id             String   @id @default(uuid())
  userId         String
  provider       String   @db.VarChar(50) // 'google', 'github'
  providerUserId String   @db.VarChar(255)

  user           User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  @@unique([provider, providerUserId])
  @@index([userId])
  @@map("auth_identities")
}

model Blog {
  id         String     @id @default(uuid())
  title      String     @db.VarChar(200)
  slug       String     @unique @db.VarChar(250)
  excerpt    String     @db.VarChar(500)
  content    String     @db.LongText
  coverImage String?    @db.VarChar(500)
  status     BlogStatus @default(DRAFT)
  readTime   Int        @default(0)
  views      Int        @default(0)
  likes      Int        @default(0)
  isFeatured Boolean    @default(false)
  tags       Json?

  authorId String
  author   User   @relation(fields: [authorId], references: [id], onDelete: Cascade)

  publishedAt DateTime?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  deletedAt   DateTime?

  categories BlogCategory[]
  comments   Comment[]
  bookmarks  Bookmark[]

  @@index([slug])
  @@index([authorId])
  @@index([status])
  @@index([publishedAt])
  @@index([deletedAt])
  @@map("blogs")
}

model Category {
  id    String  @id @default(uuid())
  name  String  @db.VarChar(100)
  slug  String  @unique @db.VarChar(100)
  color String? @db.VarChar(7)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  blogs BlogCategory[]

  @@map("categories")
}

model BlogCategory {
  blogId     String
  categoryId String

  blog     Blog     @relation(fields: [blogId], references: [id], onDelete: Cascade)
  category Category @relation(fields: [categoryId], references: [id], onDelete: Cascade)

  @@id([blogId, categoryId])
  @@map("blog_categories")
}

model Comment {
  id       String @id @default(uuid())
  content  String @db.Text
  likes    Int    @default(0)

  authorId String
  author   User   @relation(fields: [authorId], references: [id], onDelete: Cascade)

  blogId String
  blog   Blog   @relation(fields: [blogId], references: [id], onDelete: Cascade)

  parentId String?
  parent   Comment?  @relation("CommentReplies", fields: [parentId], references: [id], onDelete: SetNull)
  replies  Comment[] @relation("CommentReplies")

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  @@index([blogId])
  @@index([authorId])
  @@index([parentId])
  @@map("comments")
}

model RefreshToken {
  id        String    @id @default(uuid())
  token     String    @unique @db.VarChar(500)
  userId    String
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  expiresAt DateTime
  revokedAt DateTime?

  createdAt DateTime @default(now())

  @@index([userId])
  @@index([token])
  @@map("refresh_tokens")
}

model PasswordResetToken {
  id        String    @id @default(uuid())
  token     String    @unique @db.VarChar(255)
  userId    String
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  expiresAt DateTime
  usedAt    DateTime?

  createdAt DateTime @default(now())

  @@index([userId])
  @@index([token])
  @@map("password_reset_tokens")
}

model Bookmark {
  userId    String
  blogId    String
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  blog Blog @relation(fields: [blogId], references: [id], onDelete: Cascade)

  @@id([userId, blogId])
  @@index([blogId])
  @@map("bookmarks")
}
